# src/main/resources/openapi.yaml
@@ -646,6 +646,24 @@ paths:
         - petstore_auth:
             - write:pets
             - read:pets
+  /store/orders:
+    get:
+      tags:
+      - store
+      summary: A list of all orders.
+      description: A list of all orders.
+      operationId: listAllOrders
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Order'
+        '400':
+          description: Invalid input
   /store/inventory:
     get:
       tags:
@@ -715,6 +733,32 @@ paths:
           description: Invalid ID supplied
         '404':
           description: Order not found
+    put:
+      tags:
+        - store
+      summary: Update order.
+      description: Update one order by Id.
+      operationId: putOrderById
+      parameters:
+        - name: orderId
+          in: path
+          description: ID of order that needs to be fetched
+          required: true
+          schema:
+            type: integer
+            format: int64
+            example: 1001
+      responses:
+        '200':
+          description: successful PUT operation.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Order not found
     delete:
       tags:
         - store
@@ -731,6 +775,8 @@ paths:
             format: int64
             example: 1001
       responses:
+        '201':
+          description: order deleted.
         '400':
           description: Invalid ID supplied
         '404':
